kubernetes/platform/infra/longhorn/overlays/workload-prd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https-longhorn
  hostnames:
    - "longhorn.yuriykovalchuk.dev"
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
